feat(runtime): make qualified onboarding explicit (#78)